# Gobblet-Gobblers

./: GOBBLET-GOBBLERS-1.cpp  README.md
Copilot/: CMakeLists.txt  README.md
Copilot/assets/: README.md
Copilot/include/: Board.h  Game.h  Piece.h  Player.h  Renderer.h
Copilot/src/: Board.cpp  Game.cpp  Piece.cpp  Player.cpp  Renderer.cpp  main.cpp
